<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:useDefaultMargins="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/activity_main">

    <GridLayout
        android:layout_columnWeight="1"
        android:layout_rowWeight="0.3"
        android:layout_row="0"
        android:layout_column="0">

        <Button
            android:id="@+id/allowgps"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/allowGPS" />

        <Button
            android:id="@+id/activategps"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/activateGPS" />

        <Button
            android:id="@+id/disablegps"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/disableGPS" />

        <Button
            android:id="@+id/startroute"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/startroute" />

        <Button
            android:id="@+id/finishroute"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/finishroute" />

    </GridLayout>

    <GridLayout
        android:layout_columnWeight="1"
        android:layout_rowWeight="0.2"
        android:layout_row="1"
        android:layout_column="0">

        <TextView
            android:id="@+id/travelledDistanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:text="@string/travelleddistance"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/travelledDistanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/distanceTravelled"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/timeSpentLabel"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/timespent"
            android:textSize="24sp" />

        <Chronometer
            android:id="@+id/timeSpentChronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:textSize="24sp" />
    </GridLayout>

    <GridLayout
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_row="2"
        android:layout_column="0">

        <EditText
            android:id="@+id/searchTextView"
            android:layout_width="326dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="top"
            android:hint="@string/lookfor"
            android:inputType="textPersonName"
            android:textSize="16sp" />
    </GridLayout>


</GridLayout>